--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,15 @@
   <div class="container-fluid" id="top-bar">
     <div class="row-fluid">
       <div class="span12">
+        <center style="color: #FFF;">The website is going through a rebranding process</center>
+        <!-- 
         <a class="brand pull-left" href="index.html"><img src="img/logo.png" alt="e-Classifieds" title="e-Classifieds"></a>
         <ul class="nav nav-pills pull-right">
           <li class="phone"><img src="img/phone.png" alt="" /></li>
           <li><a href="#"><i class="icon-user icon-white"></i> Sign In</a></li>
           <li><a href="#"><i class="icon-edit icon-white"></i> Create your profile</a></li>
-        </ul>                 
+        </ul>
+      -->
       </div>
     </div>
   </div>
@@ -25,7 +28,7 @@
               <li<%= ' class=active' if  params[:controller] == 'home'%>>
                 <a href="<%=root_path%>">Home</a>
               </li>
-              <li<%= ' class=active' if  params[:controller] == 'advertiser'%>>
+<!--              <li<%= ' class=active' if  params[:controller] == 'advertiser'%>>
                 <a href="listing.html">Listings</a>
               </li>
               <li<%= ' class=active' if  params[:controller] == 'brands'%>>
@@ -35,6 +38,7 @@
               <li><a href="#">Articles</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="#">Contact Us</a></li>
+-->
             </ul>
           </div>
         </div>
@@ -42,6 +46,7 @@
     </div>    
   </div>  
 <!--
+  To be deleted
 
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
