--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,10 +23,11 @@ body{
   line-height:18px;
 }
 
-a:link,a:visited{
+a.subinfo:link,a.subinfo:visited{
   color:#333;
 }
-a:hover{
+
+a.subinfo:hover{
   color:#EE3C1F;
 }
 
@@ -307,6 +308,8 @@ ul.social li{
   margin-top:20px;
 }
 .detail-product span.label.price{
+  display: initial;
+  padding: 1px 4px 2px;
   font-size:14pt;
   position:relative;
   top:5px;
@@ -324,3 +327,45 @@ ul.social li{
 
 
 
+.btn-charlie {
+  background-color: hsl(108, 44%, 52%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f2f9f0", endColorstr="#64ba4e");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#f2f9f0), to(#64ba4e));
+  background-image: -moz-linear-gradient(top, #f2f9f0, #64ba4e);
+  background-image: -ms-linear-gradient(top, #f2f9f0, #64ba4e);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f2f9f0), color-stop(100%, #64ba4e));
+  background-image: -webkit-linear-gradient(top, #f2f9f0, #64ba4e);
+  background-image: -o-linear-gradient(top, #f2f9f0, #64ba4e);
+  background-image: linear-gradient(#f2f9f0, #64ba4e);
+  border-color: #64ba4e #64ba4e hsl(108, 44%, 41%);
+  color: #666 !important;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.72);
+  -webkit-font-smoothing: antialiased;
+}
+
+.btn-golf {
+  background-color: hsl(195, 79%, 46%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#daf2fa", endColorstr="#18a3d1");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#daf2fa), to(#18a3d1));
+  background-image: -moz-linear-gradient(top, #daf2fa, #18a3d1);
+  background-image: -ms-linear-gradient(top, #daf2fa, #18a3d1);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #daf2fa), color-stop(100%, #18a3d1));
+  background-image: -webkit-linear-gradient(top, #daf2fa, #18a3d1);
+  background-image: -o-linear-gradient(top, #daf2fa, #18a3d1);
+  background-image: linear-gradient(#daf2fa, #18a3d1);
+  border-color: #18a3d1 #18a3d1 hsl(195, 79%, 34.5%);
+  color: #666 !important;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  -webkit-font-smoothing: antialiased;
+}
+
+
+
+ul.depth2 {
+  margin-left: 10px;
+}
+.detail-product > .breadcrumb {
+  margin: 20px 0;
+}
