--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,22 +1,51 @@
-<div class="media product-list">
-  <a class="pull-left" href="<%=product_path(product)%>" title="<%=raw product.name%>">
-    <div class="price-tag"><%=product.search_price %> <%=product.currency%> </div>
-    <img class="media-object img-polaroid" data-src="holder.js/64x64" src="<%=product.aw_image_url%>">
-  </a>
-  <div class="media-body">
-    <h4 class="media-heading"><%= link_to raw(product.name), visit_product_path(product), {
-      :title => raw(product.name)
-    }  %></h4>
-    <small class="clearfix"><%= raw product.description %></small>
-    <% unless product.category.nil?%>
-    <small>
-      <%= link_to raw(product.category), category_advertiser_path(product.advertiser,product.category), {
-      :title => "More in category &quot;"+ raw(product.category) + "&quot; by this merchant"
-    }  %></small>
-    <% end %>
-    <%= link_to 'Details', visit_product_path(product), {
-      :class => 'btn btn-charlie pull-right', 
-      :title => raw(product.name)
-    }  %>
+<div class="listing-item">
+  <div class="row-fluid">
+    <div class="span7">
+      <div class="featured-item">
+        <div class="span4">
+          <%= avatar_of_product(product, {}, {:class => "img"})%>
+          <!--<div class="rate">
+            <img src="img/products/img_rateMiniStarOn.png" alt="Star On">
+            <img src="img/products/img_rateMiniStarOn.png" alt="Star On">
+            <img src="img/products/img_rateMiniStarOn.png" alt="Star On">
+            <img src="img/products/img_rateMiniStarOn.png" alt="Star On">
+            <img src="img/products/img_rateMiniStarOff.png" alt="Star Off">
+          </div>  
+          -->
+        </div>
+        <div class="span8">
+          <h5><%= link_to_product(product, :short , { :class => "title" }) %></h5>
+          in  <%= link_to_category(product.category,:short, {:class => "subinfo"}) %>
+          <p><%=raw(product.short_description(20)) %></p>
+          <!-- <i>(0 review)</i> -->
+        </div>
+      </div>
+    </div>
+    <div class="span5">
+      <div class="other_info">
+        <% if product.price > 0 %>
+          <span class="label label-important price"><%=product.price%> <%=product.currency%></span> <!-- Save 15% -->
+          <hr/>
+        <% end %>
+        <address>
+          <i><%=link_to_advertiser(product.advertiser)%>
+           <br />
+           <%= raw(product.advertiser.strapline) %></i>
+        </address>
+        <p>
+          
+          <strong>Merchant:</strong> <%=link_to_advertiser(product.advertiser)%><br/>
+          <% unless product.brand.nil? %>
+            <strong>Brand:</strong> <%=link_to_brand(product.brand, :short)%><br/>  
+          <% end %>
+          <strong>Merchant URL:</strong> 
+          <a href="<%=product.advertiser.promote_url%>" rel="nofollow" target="_blank"><%=product.advertiser.single_url%></a></p>
+        
+          <%= link_to 'Details', product_path(product), {
+            :class => 'btn btn-small btn-primary ', 
+            :title => raw(product.name)
+          }  %>
+      </div>
+    </div>
   </div>
 </div>
