--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
     <% if Rails.env == 'production' %>
-      <title><%= 'ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : "" ) %></title>
-      <meta name="description" content="<%= 'ShopWithMe' + (content_for?(:page_description) ? ' - ' + yield(:page_description) : "") %>"/>
+      <title><%= raw('ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : "" )) %></title>
+      <meta name="description" content="<%= raw('ShopWithMe' + (content_for?(:page_description) ? ' - ' + yield(:page_description) : "") )%>"/>
       <script type="text/javascript">
 
         var _gaq = _gaq || [];
@@ -20,11 +20,8 @@
 
     <% elsif !devise_controller? %>
 
-    <%= Rails.cache.fetch("cache_#{params.flatten.join("_")}", :expires => 3.hours)  do %>
-      <title><%= 'ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : (raise "no title" )) %></title>
-      <meta name="description" content="<%= content_for?(:page_description) ? 'ShopWithMe - ' + yield(:page_description) : ( raise "no page_description" ) %>"/>
-    <% end %>
-
+      <title><%= raw( 'ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : (raise "no title" )) ) %></title>
+      <meta name="description" content="<%= raw(content_for?(:page_description) ? 'ShopWithMe - ' + yield(:page_description) : ( raise "no page_description" )) %>"/>
     <% end %>
     
   <%= stylesheet_link_tag    "application", :media => "all" %>
@@ -47,7 +44,7 @@
   </div>
 </div>
 
-<%= Rails.cache.fetch("cache_footer", :expires => 20.minutes ) { render 'layouts/footer' } %>
+<%= Rails.cache.fetch("cache_footer", :expires_in => 20.minutes ) { render 'layouts/footer' } %>
 
 </body>
 </html>
