--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,17 +28,17 @@
               <li<%= ' class=active' if  params[:controller] == 'home'%>>
                 <a href="<%=root_path%>">Home</a>
               </li>
-<!--              <li<%= ' class=active' if  params[:controller] == 'advertiser'%>>
-                <a href="listing.html">Listings</a>
+              <li<%= ' class=active' if  params[:controller] == 'advertiser'%>>
+                <a href="<%=categories_path%>">Categories</a>
               </li>
-              <li<%= ' class=active' if  params[:controller] == 'brands'%>>
+              <!--<li<%= ' class=active' if  params[:controller] == 'brands'%>>
                 <a href="classifieds.html">Classifieds</a>
               </li>
               <li><a href="deals.html">Deals</a></li>
               <li><a href="#">Articles</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="#">Contact Us</a></li>
--->
+            -->
             </ul>
           </div>
         </div>
