--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<% content_for(:page_title) { "ShopWithMe - Listing all the categories" } %>
+<% content_for(:page_description) { "ShopWithMe - Listing all the categories" } %>
+
+<%= render 'products/search_form' %>
+
+<div class="main_content detail-product">
+  <h3 class="title uppercase">Categories</h3>
+
+  <% if @categories.size > 0 %>
+    <%= render @categories %>
+    <%= paginate @categories, :window => 2 %>
+  <% else %>
+    <%= render 'categories/no_categories' %>
+  <% end %>
+
+</div>
