--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,6 +1,6 @@
 <h3 class="title">
   <span class="pull-left"><%=category%></span>
-  <span class="pull-right"><%= link_to('View products',category_path(category), :title => raw(category))%></span>
+  <span class="pull-right"><%= link_to('View products',category_path(category), :title => category)%></span>
 </h3>
 <div class="container-fluid">
   <div class="row-fluid product_listing">
