--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -16,7 +16,7 @@
         <div class="span8">
           <h5><%= link_to_product(product, :short , { :class => "title" }) %></h5>
           in  <%= link_to_category(product.category,:short, {:class => "subinfo"}) %>
-          <p><%=raw(product.short_description(20)) %></p>
+          <p><%=(product.short_description(20)) %></p>
           <!-- <i>(0 review)</i> -->
         </div>
       </div>
@@ -30,7 +30,7 @@
         <address>
           <i><%=link_to_advertiser(product.advertiser)%>
            <br />
-           <%= raw(product.advertiser.strapline) %></i>
+           <%= (product.advertiser.strapline) %></i>
         </address>
         <p>
           
@@ -43,7 +43,7 @@
         
           <%= link_to 'Details', product_path(product), {
             :class => 'btn btn-small btn-primary ', 
-            :title => raw(product.name)
+            :title => (product.name)
           }  %>
       </div>
     </div>
