--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,6 +34,9 @@
               <li<%= ' class=active' if  params[:controller] == 'advertisers'%>>
                 <a href="<%=advertisers_path%>">Merchants</a>
               </li>
+              <li<%= ' class=active' if  params[:controller] == 'brands'%>>
+                <a href="<%=brands_path%>">Brands</a>
+              </li>
               <!--<li<%= ' class=active' if  params[:controller] == 'brands'%>>
                 <a href="classifieds.html">Classifieds</a>
               </li>
