--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Brands#index</h1>
-<p>Find me in app/views/brands/index.html.erb</p>
+<% content_for(:page_title) { "ShopWithMe - Listing all the brands" } %>
+<% content_for(:page_description) { "ShopWithMe - Listing all the brands" } %>
+
+<%= render 'products/search_form' %>
+
+<div class="main_content detail-product">
+  <h3 class="title uppercase">Brands</h3>
+
+  <% if @brands.size > 0 %>
+    <%= render @brands %>
+    <%= paginate @brands, :window => 2 %>
+  <% else %>
+    <%= render 'brands/no_brands' %>
+  <% end %>
+
+</div>
