--- a/app/views/categories/_show_sidebar.html.erb
+++ b/app/views/categories/_show_sidebar.html.erb
@@ -3,8 +3,10 @@
 
 <div class="reviews-item">
   <ul class="inline padded">
-    <% @category.fetch_advertisers.random.limit(9).each do |advertiser| %>
-      <li><%=avatar_of_advertiser(advertiser)%></li>
+    <% Rails.cache.fetch("advertisers_for_#{@category.id}_category", :expires_in => 3.hours) do %>
+      <% @category.fetch_advertisers.random.limit(9).each do |advertiser| %>
+        <li><%=avatar_of_advertiser(advertiser)%></li>
+      <% end %>
     <% end %>
   </ul>
 </div>
