--- a/app/views/layouts/error.html.erb
+++ b/app/views/layouts/error.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
     <% if Rails.env == 'production' %>
-      <title><%= 'ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : "" ) %></title>
-      <meta name="description" content="<%= 'ShopWithMe' + (content_for?(:page_description) ? ' - ' + yield(:page_description) : "") %>"/>
+      <title><%= 'ShopWithMe - Error' %></title>
+      <meta name="description" content="<%= 'ShopWithMe - Some kind of error occured' %>"/>
       <script type="text/javascript">
 
         var _gaq = _gaq || [];
@@ -17,14 +17,6 @@
         })();
 
       </script>
-
-    <% elsif !devise_controller? %>
-
-    <%= Rails.cache.fetch("cache_#{params.flatten.join("_")}", :expires => 3.hours)  do %>
-      <title><%= 'ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : (raise "no title" )) %></title>
-      <meta name="description" content="<%= content_for?(:page_description) ? 'ShopWithMe - ' + yield(:page_description) : ( raise "no page_description" ) %>"/>
-    <% end %>
-
     <% end %>
     
   <%= stylesheet_link_tag    "application", :media => "all" %>
