--- a/app/views/advertisers/_index_sidebar.html.erb
+++ b/app/views/advertisers/_index_sidebar.html.erb
@@ -1,1 +1,4 @@
-<%= Rails.cache.fetch('sidebar_categories', :expires => 24.hours) {render 'layouts/sidebar_categories'} %>
+<% cache('sidebar_categories', :expires => 24.hours) do %>
+  <%= render 'layouts/sidebar_categories' %>
+<% end %>
+
