--- a/app/views/home/_index_sidebar.html.erb
+++ b/app/views/home/_index_sidebar.html.erb
@@ -1,4 +1,8 @@
-<%= Rails.cache.fetch('sidebar_categories', :expires => 24.hours) {render 'layouts/sidebar_categories'} %>
+<% cache('sidebar_categories', :expires => 24.hours) do %>
+  <%= render 'layouts/sidebar_categories' %>
+<% end %>
+
+
 <%
 =begin %>
 
