caching, caching caching

--- a/app/views/brands/_brand.html.erb
+++ b/app/views/brands/_brand.html.erb
@@ -5,7 +5,8 @@
 <div class="container-fluid">
   <div class="row-fluid product_listing">
 
-    <% brand.products.include_all.random.limit(4).each do |product|%>
+    <% brand.random_products.includes(:product => [:advertiser, :category, :brand]).limit(4).each do |random_product|%>
+      <% product = random_product.product %>
       <div class="span3">
         <div class="item">
           <%= avatar_of_product(product, {}, {:class => "img"})%>
