--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         })();
 
       </script>
-
+      <meta name="msvalidate.01" content="C37E9EC521B9371CC59E45A9438EAACF" />
     <% elsif !devise_controller? %>
 
       <title><%= ( 'ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : (raise "no title" )) ) %></title>
