--- a/app/views/products/_search_form.html.erb
+++ b/app/views/products/_search_form.html.erb
@@ -1,3 +1,5 @@
+<%
+=begin %>
 <!-- <form class="search_top_form">            
   <ul>
     <li>
@@ -22,3 +24,6 @@
     </li>
   </ul>
 </form> -->
+
+<%
+=end %>
